add shapes link

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <path transform="rotate(14 351 181.5)" id="svg_21" d="m320.5,208.187561l30.500488,-53.375122l30.499512,53.375122l-61,0z" stroke-opacity="0" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" stroke="#000000" fill="#4784c1"/>
  </g>
 </svg>
+
+<a href="https://dbacarel.github.io/webgl_tryouts/shapes/demo.html">Shapes</a>
 </body>
 </html>
